--- a/Problème 2.ipynb
+++ b/Problème 2.ipynb
@@ -1,19 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87a105d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "d8314746",
    "metadata": {},
    "source": [
     "Problème 2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a0104d90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
    ]
   }
  ],
