--- a/Problème 2.ipynb
+++ b/Problème 2.ipynb
@@ -2,18 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "87a105d1",
+   "execution_count": 4,
+   "id": "f2bd3f78",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WRDS recommends setting up a .pgpass file.\n",
+      "pgpass file created at C:\\Users\\grego\\AppData\\Roaming\\postgresql\\pgpass.conf\n",
+      "Created .pgpass file successfully.\n",
+      "You can create this file yourself at any time with the create_pgpass_file() function.\n",
+      "Loading library list...\n",
+      "pgpass file created at C:\\Users\\grego\\AppData\\Roaming\\postgresql\\pgpass.conf\n",
+      "Created .pgpass file successfully.\n",
+      "You can create this file yourself at any time with the create_pgpass_file() function.\n",
+      "Loading library list...\n",
+      "Done\n",
+      "pgpass file created at C:\\Users\\grego\\AppData\\Roaming\\postgresql\\pgpass.conf\n",
+      "pgpass created at: None\n",
+      "Done\n",
+      "pgpass file created at C:\\Users\\grego\\AppData\\Roaming\\postgresql\\pgpass.conf\n",
+      "pgpass created at: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create pgpass with WRDS helper (one-time)\n",
+    "import wrds\n",
+    "try:\n",
+    "    # If you’re prompted this time, enter your WRDS username/password once.\n",
+    "    # The helper will write the pgpass file to the correct path for your OS.\n",
+    "    db = wrds.Connection()\n",
+    "    path = db.create_pgpass_file()  # returns the path it wrote to\n",
+    "    print(\"pgpass created at:\", path)\n",
+    "    db.close()\n",
+    "except Exception as e:\n",
+    "    print(\"Could not create pgpass:\", e)"
+   ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d8314746",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87015d44",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WRDS recommends setting up a .pgpass file.\n"
+     ]
+    }
+   ],
    "source": [
-    "Problème 2 "
+    "import wrds\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Connect to WRDS\n",
+    "db = wrds.Connection()\n",
+    "\n",
+    "# Define your list of PERMNOs (replace with your actual list)\n",
+    "permnos = [14322, 14020, 84788, 90319]  \n",
+    "\n",
+    "# Download daily price data from CRSP\n",
+    "crsp_data = db.get_table(\n",
+    "    library='crsp',\n",
+    "    table='dsf',\n",
+    "    columns=['date', 'permno', 'prc', 'ret', 'vol'],\n",
+    "    obs=None,\n",
+    "    where=f\"permno in ({','.join(map(str, permnos))}) and date between '2012-01-03' and '2023-01-03'\"\n",
+    ")\n",
+    "\n",
+    "# Convert to DataFrame if not already\n",
+    "df = pd.DataFrame(crsp_data)\n",
+    "\n",
+    "# Close the connection\n",
+    "db.close()\n",
+    "\n",
+    "# Save to CSV\n",
+    "df.to_csv('crsp_daily_data.csv', index=False)"
    ]
   }
  ],
@@ -33,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
