--- a/Problème 2 avec Yahoo.ipynb
+++ b/Problème 2 avec Yahoo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "id": "a9c5e07a",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "id": "ea2fbe21",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "id": "a69e335f",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "id": "4df275de",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "id": "de563139",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "a2c835ce",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "id": "5b971894",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "id": "1300747d",
    "metadata": {},
    "outputs": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 73,
    "id": "6d58ed6f",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "id": "5e0550de",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "id": "6fc18e39",
    "metadata": {},
    "outputs": [
@@ -1281,6 +1281,19 @@
       "  Rejet H0: Oui\n",
       "  Interprétation: Regroupement significatif\n",
       "\n",
+      "VaR Récursive (EWMA):\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 151\n",
+      "  Séquences observées: 281\n",
+      "  Séquences attendues: 286.5\n",
+      "  Statistique Z: -0.927\n",
+      "  P-value: 0.3537\n",
+      "  Rejet H0: Non\n",
+      "  Interprétation: Pas de regroupement significatif\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "=== GOOGL (Secteur technologique) ===\n",
       "VaR Récursive (EWMA):\n",
       "  Observations totales: 2,768\n",
       "  Violations: 151\n",
@@ -1347,6 +1360,83 @@
       "  Rejet H0: Oui\n",
       "  Interprétation: Regroupement significatif\n",
       "\n",
+      "VaR Historique:\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 139\n",
+      "  Séquences observées: 245\n",
+      "  Séquences attendues: 265.0\n",
+      "  Statistique Z: -3.900\n",
+      "  P-value: 0.0001\n",
+      "  Rejet H0: Oui\n",
+      "  Interprétation: Regroupement significatif\n",
+      "\n",
+      "VaR Gaussienne:\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 117\n",
+      "  Séquences observées: 211\n",
+      "  Séquences attendues: 225.1\n",
+      "  Statistique Z: -3.201\n",
+      "  P-value: 0.0014\n",
+      "  Rejet H0: Oui\n",
+      "  Interprétation: Regroupement significatif\n",
+      "\n",
+      "VaR Récursive (EWMA):\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 133\n",
+      "  Séquences observées: 259\n",
+      "  Séquences attendues: 254.2\n",
+      "  Statistique Z: 0.891\n",
+      "  P-value: 0.3729\n",
+      "  Rejet H0: Non\n",
+      "  Interprétation: Pas de regroupement significatif\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "=== EOG (Secteur énergétique) ===\n",
+      "VaR Historique:\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 139\n",
+      "  Séquences observées: 252\n",
+      "  Séquences attendues: 265.0\n",
+      "  Statistique Z: -2.503\n",
+      "  P-value: 0.0123\n",
+      "  Rejet H0: Oui\n",
+      "  Interprétation: Regroupement significatif\n",
+      "\n",
+      "VaR Gaussienne:\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 101\n",
+      "  Séquences observées: 183\n",
+      "  Séquences attendues: 195.6\n",
+      "  Statistique Z: -3.287\n",
+      "  P-value: 0.0010\n",
+      "  Rejet H0: Oui\n",
+      "  Interprétation: Regroupement significatif\n",
+      "\n",
+      "VaR Récursive (EWMA):\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 133\n",
+      "  Séquences observées: 248\n",
+      "  Séquences attendues: 254.2\n",
+      "  Statistique Z: -1.190\n",
+      "  P-value: 0.2339\n",
+      "  Rejet H0: Non\n",
+      "  Interprétation: Pas de regroupement significatif\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "=== TABLEAU DE SYNTHÈSE DU TEST DE SÉQUENCES ===\n",
+      "\n",
+      "Ticker          Modèle  Violations  Séquences_Obs  Séquences_Att  Statistique_Z Rejet_H0\n",
+      "   SPY      Historique         139            239          265.0         -5.098      Oui\n",
+      "   SPY        Gaussien         123            215          236.1         -4.613      Oui\n",
+      "   SPY Récursif (EWMA)         151            281          286.5         -0.927      Non\n",
+      " GOOGL      Historique         139            245          265.0         -3.900      Oui\n",
+      " GOOGL        Gaussien         117            211          225.1         -3.201      Oui\n",
+      " GOOGL Récursif (EWMA)         133            259          254.2          0.891      Non\n",
+      "   EOG      Historique         139            252          265.0         -2.503      Oui\n",
+      "   EOG        Gaussien         101            183          195.6         -3.287      Oui\n",
+      "   EOG Récursif (EWMA)         133            248          254.2         -1.190      Non\n",
       "VaR Récursive (EWMA):\n",
       "  Observations totales: 2,768\n",
       "  Violations: 133\n",
