--- a/Probleme 3.ipynb
+++ b/Probleme 3.ipynb
@@ -70,7 +70,7 @@
     "        \"Moyenne\": np.mean(data),\n",
     "        \"Écart-type\": np.std(data, ddof=1),\n",
     "        \"Asymétrie\": skew(data),\n",
-    "        \"Aplatissement (kurtosis)\": kurtosis(data, fisher=True)}\n",
+    "        \"Aplatissement (kurtosis)\": kurtosis(data, fisher=True)} # fisher=True pour obtenir l'excès de kurtosis\n",
     "\n",
     "stats_normal = summary_stats(returns_normal)\n",
     "stats_t = summary_stats(returns_t_scaled)\n",
