--- a/Problème 2 avec Yahoo.ipynb
+++ b/Problème 2 avec Yahoo.ipynb
@@ -5,13 +5,13 @@
    "id": "e14a8654",
    "metadata": {},
    "source": [
-    "# Problème 2: Collecte de données Yahoo Finance (2012-2023)\n",
+    "# Collecte de données avec Yahoo Finance (2012-2023)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "id": "a9c5e07a",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "id": "ea2fbe21",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "id": "a69e335f",
    "metadata": {},
    "outputs": [
@@ -170,13 +170,13 @@
    "id": "ebb425c7",
    "metadata": {},
    "source": [
-    "# Problème 2(a): Statistiques descriptives et graphiques des rendements\n",
+    "# Problème 2\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 80,
    "id": "4df275de",
    "metadata": {},
    "outputs": [
@@ -346,6 +346,7 @@
     }
    ],
    "source": [
+    "#Problème 2(a): Statistiques descriptives et graphiques des rendements\n",
     "# Importer les librairies pour les graphiques et statistiques\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "id": "de563139",
    "metadata": {},
    "outputs": [
@@ -499,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "id": "a2c835ce",
    "metadata": {},
    "outputs": [
@@ -566,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "id": "5b971894",
    "metadata": {},
    "outputs": [
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "id": "1300747d",
    "metadata": {},
    "outputs": [
@@ -901,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "id": "6d58ed6f",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "id": "5e0550de",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "id": "6fc18e39",
    "metadata": {},
    "outputs": [
@@ -1294,19 +1295,6 @@
       "----------------------------------------------------------------------\n",
       "\n",
       "=== GOOGL (Secteur technologique) ===\n",
-      "VaR Récursive (EWMA):\n",
-      "  Observations totales: 2,768\n",
-      "  Violations: 151\n",
-      "  Séquences observées: 281\n",
-      "  Séquences attendues: 286.5\n",
-      "  Statistique Z: -0.927\n",
-      "  P-value: 0.3537\n",
-      "  Rejet H0: Non\n",
-      "  Interprétation: Pas de regroupement significatif\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "\n",
-      "=== GOOGL (Secteur technologique) ===\n",
       "VaR Historique:\n",
       "  Observations totales: 2,768\n",
       "  Violations: 139\n",
@@ -1360,83 +1348,6 @@
       "  Rejet H0: Oui\n",
       "  Interprétation: Regroupement significatif\n",
       "\n",
-      "VaR Historique:\n",
-      "  Observations totales: 2,768\n",
-      "  Violations: 139\n",
-      "  Séquences observées: 245\n",
-      "  Séquences attendues: 265.0\n",
-      "  Statistique Z: -3.900\n",
-      "  P-value: 0.0001\n",
-      "  Rejet H0: Oui\n",
-      "  Interprétation: Regroupement significatif\n",
-      "\n",
-      "VaR Gaussienne:\n",
-      "  Observations totales: 2,768\n",
-      "  Violations: 117\n",
-      "  Séquences observées: 211\n",
-      "  Séquences attendues: 225.1\n",
-      "  Statistique Z: -3.201\n",
-      "  P-value: 0.0014\n",
-      "  Rejet H0: Oui\n",
-      "  Interprétation: Regroupement significatif\n",
-      "\n",
-      "VaR Récursive (EWMA):\n",
-      "  Observations totales: 2,768\n",
-      "  Violations: 133\n",
-      "  Séquences observées: 259\n",
-      "  Séquences attendues: 254.2\n",
-      "  Statistique Z: 0.891\n",
-      "  P-value: 0.3729\n",
-      "  Rejet H0: Non\n",
-      "  Interprétation: Pas de regroupement significatif\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "\n",
-      "=== EOG (Secteur énergétique) ===\n",
-      "VaR Historique:\n",
-      "  Observations totales: 2,768\n",
-      "  Violations: 139\n",
-      "  Séquences observées: 252\n",
-      "  Séquences attendues: 265.0\n",
-      "  Statistique Z: -2.503\n",
-      "  P-value: 0.0123\n",
-      "  Rejet H0: Oui\n",
-      "  Interprétation: Regroupement significatif\n",
-      "\n",
-      "VaR Gaussienne:\n",
-      "  Observations totales: 2,768\n",
-      "  Violations: 101\n",
-      "  Séquences observées: 183\n",
-      "  Séquences attendues: 195.6\n",
-      "  Statistique Z: -3.287\n",
-      "  P-value: 0.0010\n",
-      "  Rejet H0: Oui\n",
-      "  Interprétation: Regroupement significatif\n",
-      "\n",
-      "VaR Récursive (EWMA):\n",
-      "  Observations totales: 2,768\n",
-      "  Violations: 133\n",
-      "  Séquences observées: 248\n",
-      "  Séquences attendues: 254.2\n",
-      "  Statistique Z: -1.190\n",
-      "  P-value: 0.2339\n",
-      "  Rejet H0: Non\n",
-      "  Interprétation: Pas de regroupement significatif\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "\n",
-      "=== TABLEAU DE SYNTHÈSE DU TEST DE SÉQUENCES ===\n",
-      "\n",
-      "Ticker          Modèle  Violations  Séquences_Obs  Séquences_Att  Statistique_Z Rejet_H0\n",
-      "   SPY      Historique         139            239          265.0         -5.098      Oui\n",
-      "   SPY        Gaussien         123            215          236.1         -4.613      Oui\n",
-      "   SPY Récursif (EWMA)         151            281          286.5         -0.927      Non\n",
-      " GOOGL      Historique         139            245          265.0         -3.900      Oui\n",
-      " GOOGL        Gaussien         117            211          225.1         -3.201      Oui\n",
-      " GOOGL Récursif (EWMA)         133            259          254.2          0.891      Non\n",
-      "   EOG      Historique         139            252          265.0         -2.503      Oui\n",
-      "   EOG        Gaussien         101            183          195.6         -3.287      Oui\n",
-      "   EOG Récursif (EWMA)         133            248          254.2         -1.190      Non\n",
       "VaR Récursive (EWMA):\n",
       "  Observations totales: 2,768\n",
       "  Violations: 133\n",
